syntax = "proto3";

package node;

option go_package = ".;node";

// 节点注册请求 请求节点 id 和 集群 id
message NodeRegisterRequest {
  string nodeId = 1; // 节点ID
  string clusterId = 2; // 集群ID
}

// 节点注册回复 返回节点 id 和 时间戳
message NodeRegisterReply {
  string nodeId = 1; // 节点ID
  int64 timestamp = 2; // 时间戳
}


// 节点服务定义
service NodeService {
  // 节点注册
    rpc NodeRegister (stream NodeRegisterRequest) returns (stream NodeRegisterReply);
}
